--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "concurrently \"rimraf dist\" \"tsc\"",
     "predev": "pnpm run build",
-    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\""
+    "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
+    "start":"node dist/index.js"
   },
   "keywords": [],
   "author": "",
