--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "concurrently \"rimraf dist\" \"tsc\"",
     "predev": "pnpm run build",
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "start":"node dist/index.js"
+    "start": "node dist/index.js"
   },
   "packageManager": "pnpm@9.6.0",
   "keywords": [],
@@ -29,6 +29,7 @@
     "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
     "nodemon": "^3.1.4",
+    "rimraf": "^6.0.1",
     "typescript": "^5.5.3"
   },
   "dependencies": {
