--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "concurrently \"rimraf dist\" \"tsc\"",
+    "postbuild": "copyfiles -u 1 src/documentation/* dist/",
     "predev": "pnpm run build",
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
     "start": "node dist/index.js"
@@ -24,7 +25,9 @@
     "@types/http-errors": "^2.0.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.11",
+    "@types/swagger-ui-express": "^4.1.6",
     "connect-mongo": "^5.1.0",
+    "copyfiles": "^2.4.1",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "http-errors": "^2.0.0",
@@ -43,6 +46,7 @@
     "helmet": "^7.1.0",
     "mongoose": "^8.5.1",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   }
 }
