--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postbuild": "copyfiles -u 1 src/documentation/* dist/",
     "predev": "pnpm run build",
     "dev": "concurrently \"tsc --watch\" \"nodemon dist/index.js\"",
-    "start": "node dist/index.js"
+    "start": "node --no-warnings --trace-warnings  dist/index.js"
   },
   "packageManager": "pnpm@9.6.0",
   "keywords": [],
