fixing probnlems with delete table endpoint

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "backend": "link:",
     "bcrypt": "^5.1.1",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
